<resources>
    <string name="app_name">CR1100502</string>

    <string name="hello_world">Resultado</string>
    <string name="action_settings">Settings</string>
    <string name="boton1">Intent</string>
    <string name="boton2">Sum1</string>
    <string name="boton3">Sum2</string>
    <string name="boton4">Sum3</string>
    <string name="parametro1">Sumando1</string>
    <string name="parametro2">Sumando2</string>
    <string name="parametro3">Sumando 3</string>
</resources>
